fix: make /mint a post
